--- a/HollerUp/HollerUp/XIBS/Profile/NameCell.xib
+++ b/HollerUp/HollerUp/XIBS/Profile/NameCell.xib
@@ -35,8 +35,8 @@
                             </constraint>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vamsi Bindu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zld-c8-bIa">
-                        <rect key="frame" x="80" y="18.5" width="103.5" height="23"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vamsi G" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zld-c8-bIa">
+                        <rect key="frame" x="80" y="18.5" width="68.5" height="23"/>
                         <fontDescription key="fontDescription" name="Lato-Medium" family="Lato" pointSize="19"/>
                         <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
